# kafka-some-function

./: README.md  docker-compose.yml
example/: detection_query.sh
example/python/: CMakeLists.txt  README.md  consumer_to_db.py  create_topic.py  data_schema.py  helper.py  mongo_insert.py  producer.cpp  producer_from_socketio.py  query_detection.py  read_img.py  send_img.py  simple_consumer.py  simple_producer.py  test_detect_data.py
